[package]
name = "shargrila"
version = "0.1.0"
authors = ["minami <minaminaoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shargrila-chain = { path = "../chain" }
rand = "0.7.3"
rand_core = "0.5.1"
rand_xorshift = "0.2.0"
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
clap = "2.33.1"